Changed the "copy" button on the exception dialog to copy and launch the crash reporting issue template on GitHub, with the title pre-filled.

--- a/VidCoder/Resources/MiscRes.resx
+++ b/VidCoder/Resources/MiscRes.resx
@@ -260,4 +260,7 @@
   <data name="ReplaceJobButton" xml:space="preserve">
     <value>Replace job</value>
   </data>
+  <data name="CopyAndReportIssueButton" xml:space="preserve">
+    <value>Copy and report issue</value>
+  </data>
 </root>
