Removed pastebin functionality for logs, and replaced with a menu option to report a problem with an completed encode.

--- a/VidCoder/Resources/MainRes.resx
+++ b/VidCoder/Resources/MainRes.resx
@@ -751,4 +751,7 @@ This warning will only display twice.</value>
   <data name="RequestFeatureMenuItem" xml:space="preserve">
     <value>Request a feature</value>
   </data>
+  <data name="CopyLogAndReportMenuItem" xml:space="preserve">
+    <value>Copy log and report problem</value>
+  </data>
 </root>
